--- a/EurofinsCodingTask/Views/Home/Index.cshtml
+++ b/EurofinsCodingTask/Views/Home/Index.cshtml
@@ -2,7 +2,31 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dynamic Text Example</title>
+</head>
+<body>
+    <h1>Prototype</h1>
+    <button id="btnDeleteAndRefresh">Refresh</button>
+    <button id="btnAddText">Add Text</button>
+    <button id="btnUseFunction">Function</button>
+    <label for="customValue1">Custom Value for 1:</label>
+    <input id="customValue1" type="text" placeholder="1">
+
+    <label for="customValue100">Custom Value for 100:</label>
+    <input id="customValue100" type="text" placeholder="100">
+    <div id="textContainer"></div>
+    
+    
+
+    
+    <script src="/js/numberDisplayScript.js"></script>
+</body>
+</html>
+
+
+
