Added some styling for fade in fade out

--- a/EurofinsCodingTask/Views/Home/Index.cshtml
+++ b/EurofinsCodingTask/Views/Home/Index.cshtml
@@ -7,12 +7,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Text Example</title>
+    <title>Numbers Task</title>
+
+    <script defer src="/js/numberDisplayScript.js"></script>
+    <script defer src="/js/scroll.js"></script>
+    <link rel="stylesheet" href="/css/style.css" />
+
 </head>
 <body>
+    <section class="hidden">
+        <h1>Numbers Task1</h1>
+        <p> Text1</p>
+    </section>
+
+    <section class="hidden">
+        <h1>Numbers Task2</h1>
+        <p> Text2</p>
+    </section class="hidden">
+
+
+    <section class="hidden">
+        <h1>Numbers Task3</h1>
+        <p> Text3</p>
+    </section>
+
+
+
+    <section class="hidden">
+
     <h1>Prototype</h1>
-    
-    
+
+  
+
     <button id="btnUseFunction">Function</button>
     <label for="customValue1">Custom Value for 1:</label>
     <input id="customValue1" type="text" placeholder="1">
@@ -21,10 +47,10 @@
     <input id="customValue100" type="text" placeholder="100">
     <div id="textContainer"></div>
     
-    
+    </section>
 
+    <section class="hidden"></section>
     
-    <script src="/js/numberDisplayScript.js"></script>
 </body>
 </html>
 
