changing backgrount of the boxes + css styling

--- a/EurofinsCodingTask/Views/Home/Index.cshtml
+++ b/EurofinsCodingTask/Views/Home/Index.cshtml
@@ -12,24 +12,21 @@
     <script defer src="/js/numberDisplayScript.js"></script>
     <script defer src="/js/scroll.js"></script>
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/buttonToggle.css" />
 
 </head>
 <body>
     <section class="hidden">
-        <h1>Numbers Task1</h1>
-        <p> Text1</p>
+        <h1>Eurofins Coding Task</h1>
+        <p> Scroll</p>
+        <p>↓↓↓</p>
     </section>
 
     <section class="hidden">
-        <h1>Numbers Task2</h1>
-        <p> Text2</p>
+        <h1>By Mateusz Judka</h1>
+        <p> Scroll</p>
+        <p>↓↓↓</p>
     </section class="hidden">
-
-
-    <section class="hidden">
-        <h1>Numbers Task3</h1>
-        <p> Text3</p>
-    </section>
 
 
 
@@ -37,9 +34,38 @@
 
     <h1>Prototype</h1>
 
+    <label for="toggleColorBlue">Toggle Blue for "Three":</label>
+    <div class="checkbox-wrapper-20" >
+    <div class="switch" >
+    <input id="toggleColorBlue" class="input" type="checkbox">
+    <label for="toggleColorBlue" class="slider" > </label >
+    </div >
+    </div >
   
+    
+    
+    
+    <label for="toggleColorRed">Toggle Red for "Five":</label>
+    <div class="checkbox-wrapper-20" >
+    <div class="switch" >
+    <input id="toggleColorRed" class="input" type="checkbox">
+    <label for="toggleColorRed" class="slider" > </label >
+    </div >
+    </div >
+    
+    <label for="toggleColorOrange">Toggle Orange for "Eurofins":</label>
+    <div class="checkbox-wrapper-20" >
+        <div class="switch" >
+        <input id="toggleColorOrange" class="input" type="checkbox">
+        <label for="toggleColorOrange" class="slider" > </label >
+        </div >
+        </div >
 
-    <button id="btnUseFunction">Function</button>
+
+
+    
+    <button class="button" id="btnUseFunction">Function</button>
+    
     <label for="customValue1">Custom Value for 1:</label>
     <input id="customValue1" type="text" placeholder="1">
 
