More buttons + hide numbers

--- a/EurofinsCodingTask/Views/Home/Index.cshtml
+++ b/EurofinsCodingTask/Views/Home/Index.cshtml
@@ -34,13 +34,15 @@
 
     <h1>Prototype</h1>
 
+    
     <label for="toggleColorBlue">Toggle Blue for "Three":</label>
-    <div class="checkbox-wrapper-20" >
+    <div class="checkbox-wrapper-20" style="margin: 0,10px,0,0;" >
     <div class="switch" >
     <input id="toggleColorBlue" class="input" type="checkbox">
     <label for="toggleColorBlue" class="slider" > </label >
     </div >
     </div >
+    
   
     
     
@@ -62,10 +64,6 @@
         </div >
 
 
-
-    
-    <button class="button" id="btnUseFunction">Function</button>
-    
     <label for="customValue1">Custom Value for 1:</label>
     <input id="customValue1" type="text" placeholder="1">
 
@@ -73,12 +71,27 @@
     <input id="customValue100" type="text" placeholder="100">
     <div id="textContainer"></div>
     
+
+
+
+    <div class="button-container" style="margin: 30px">  
+    <button class="btn-12" style="background-color: #800080; min-width: 180px; max-width:150px;" id="btnUseFunction"> <span>Display</span></button>
+    <button class="btn-12" style="background-color: darkred; min-width: 180px; max-width:150px; " id="btnHide"><span>Hide</span></button>
+    </div>
+
+
+
+    
+    
     </section>
 
     <section class="hidden"></section>
     
 </body>
 </html>
+
+
+
 
 
 
