able to turn back to numbers

--- a/EurofinsCodingTask/Views/Home/Index.cshtml
+++ b/EurofinsCodingTask/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
 
     
     <label for="toggleColorBlue">Toggle Blue for "Three":</label>
-    <div class="checkbox-wrapper-20" style="margin: 0,10px,0,0;" >
+    <div class="checkbox-wrapper-20" >
     <div class="switch" >
     <input id="toggleColorBlue" class="input" type="checkbox">
     <label for="toggleColorBlue" class="slider" > </label >
@@ -44,9 +44,6 @@
     </div >
     
   
-    
-    
-    
     <label for="toggleColorRed">Toggle Red for "Five":</label>
     <div class="checkbox-wrapper-20" >
     <div class="switch" >
@@ -60,6 +57,14 @@
         <div class="switch" >
         <input id="toggleColorOrange" class="input" type="checkbox">
         <label for="toggleColorOrange" class="slider" > </label >
+        </div >
+        </div >
+
+        <label for="toggleNumberBack">Toggle the numbers back:</label>
+        <div class="checkbox-wrapper-20" >
+        <div class="switch" >
+        <input id="toggleNumberBack" class="input" type="checkbox">
+        <label for="toggleNumberBack" class="slider" > </label >
         </div >
         </div >
 
