--- a/EurofinsCodingTask/wwwroot/css/style.css
+++ b/EurofinsCodingTask/wwwroot/css/style.css
@@ -29,9 +29,11 @@ section {
     
 }
 
+
+
 .blue-background {
-    background-color: blue;
-    color: white; 
+    background-color: #89CFEF;
+    color: white;
 }
 
 .red-background {
