Fixed missread spec

--- a/EurofinsCodingTask/Views/Home/Index.cshtml
+++ b/EurofinsCodingTask/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
 
 
 
-    <section class="hidden">
+    <section>
 
     <h1>Prototype</h1>
 
@@ -103,7 +103,7 @@
     
     </section>
 
-    <section class="hidden"></section>
+   
 
     <script>
     $(document).ready(function() {
