Design changes and added extra comments. leaving the js db submit alert for debuging untill final commit.

--- a/EurofinsCodingTask/wwwroot/css/buttonToggle.css
+++ b/EurofinsCodingTask/wwwroot/css/buttonToggle.css
@@ -1,5 +1,9 @@
-
-
+/*
+////////////////////////////////////////////////////////////////////////////////////////////////////////////
+This is a CSS file that contains the styles for the button and toggle components that can be used.
+Mateusz Judka
+////////////////////////////////////////////////////////////////////////////////////////////////////////////
+*/
 
 .checkbox-wrapper-20 {
     --slider-height: 8px;
