--- a/EurofinsCodingTask/wwwroot/css/style.css
+++ b/EurofinsCodingTask/wwwroot/css/style.css
@@ -1,3 +1,10 @@
+/*
+////////////////////////////////////////////////////////////////////////////////////////////////////////////
+This is a CSS file that contains the styles for the main page of this project.
+Mateusz Judka
+////////////////////////////////////////////////////////////////////////////////////////////////////////////
+*/
+
 body {
     color: #ffffff;
     background-color: #131316;
