--- a/EurofinsCodingTask/Views/Home/Index.cshtml
+++ b/EurofinsCodingTask/Views/Home/Index.cshtml
@@ -19,15 +19,12 @@
 <body>
     <section class="hidden">
         <h1>Eurofins Coding Task</h1>
+        <h1>By Mateusz Judka</h1>
         <p> Scroll</p>
         <p>↓↓↓</p>
     </section>
 
-    <section class="hidden">
-        <h1>By Mateusz Judka</h1>
-        <p> Scroll</p>
-        <p>↓↓↓</p>
-    </section >
+    
 
 
 
@@ -112,39 +109,22 @@
 </div>
 
 
-
-
-
-    
-    
-    
     <div style="margin:50px" id="textContainer"></div>
-    
-
-
-
-    
-
-
-
-    
     
     </section>
 
    
 
-    <script>
-        
- 
+<script>
 $(document).ready(function() {
     $('#numbersForm').on('submit', function(e) {
         e.preventDefault(); // Always call this first to stop the form from traditional submission
-        
-           // Fetch the values or set defaults if blank
+
+        // Parse input values or default to 1 and 100 if empty
         var value1 = $('#customValue1').val() === "" ? 1 : parseInt($('#customValue1').val(), 10);
         var value100 = $('#customValue100').val() === "" ? 100 : parseInt($('#customValue100').val(), 10);
 
-        // Check if value1 is greater than value100
+        // Validation to ensure start value is not greater than end value
         if (isNaN(value1) && isNaN(value100) || value1 > value100) {
             alert('Custom Value for 1 cannot be greater than Custom Value for 100.');
             return false; // Stop further execution
@@ -160,8 +140,8 @@ $(document).ready(function() {
             url: '/Home/SaveNumbers',
             data: formData,
             success: function(response) {
-                alert('Numbers saved successfully!');
-                // Additional actions upon successful submission can be placed here
+                alert('Numbers saved successfully!'); // Remove before Final commit
+                
             },
             error: function() {
                 alert('Error saving numbers.');
