Making white default and toggle Dark mode

--- a/EurofinsCodingTask/wwwroot/css/style.css
+++ b/EurofinsCodingTask/wwwroot/css/style.css
@@ -6,8 +6,8 @@ Mateusz Judka
 */
 
 body {
-    color: #ffffff;
-    background-color: #131316;
+    color: #131316;
+    background-color: #ffffff;
     font-family: 'Roboto', sans-serif;
     padding: 0;
     margin: 0;
